fix musicplayer settings popup having weird scrollbars

--- a/popup.css
+++ b/popup.css
@@ -14,7 +14,7 @@
 
 #popup-content {
     max-width:100vw;
-    max-height:100vh;
+    max-height:75vh;
     height:100vh;
     display:flex;
     margin:10px;
