--- a/popups/basic-content.css
+++ b/popups/basic-content.css
@@ -3,18 +3,19 @@ body {
     margin:0;
     height:100vh;
     width:100vw;
+    overflow:hidden;
     font-family:"Pixelify Sans";
     color:#1c6b7d;
 }
 
 .content-border {
-    height:100%;
+    height:calc(100% - 6px);
     padding:0;
     border: 3px dashed #62ecd7;
 }
 
 .content {
-    height:calc(100% - 5px);
     padding-top:5px;
+    height:calc(100% - 5px);
     background-color:#d6f0f0;
 }
